force-app/main/default/objects/Product2/fields/ARC_Sage_Item_Heading_title__c.field-meta.xml
<CustomField>
    <fullName>ARC_Sage_Item_Heading_title__c</fullName>
    <description>ARC_ICRM_SB_Heading.title  item heading title  ICRM archeading</description>
    <label>ARC_Sage_Item_Heading_title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>