force-app/main/default/objects/Product2/fields/ARC_Sage_ItemMap_SubHeadingI__c.field-meta.xml
<CustomField>
    <fullName>ARC_Sage_ItemMap_SubHeadingI__c</fullName>
    <description>ARC_ICRM_SB_ItemMap.subheadingid</description>
    <label>ARC_Sage_ItemMap_SubHeadingId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>