force-app/main/default/objects/Product2/fields/ARC_Sage_Subheading__c.field-meta.xml
<CustomField>
    <fullName>ARC_Sage_Subheading__c</fullName>
    <description>ARC_ICRM_SB_SubHeading.title   ICRM arcsubheading</description>
    <label>ARC_Sage_Subheading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>