force-app/main/default/objects/Product2/fields/ARC_Sage_Subheading_notes__c.field-meta.xml
<CustomField>
    <fullName>ARC_Sage_Subheading_notes__c</fullName>
    <description>ARC_ICRM_SB_SubHeading.notes   ICRM SubHeadingDescription</description>
    <label>ARC_Sage_Subheading_Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>