force-app/main/default/objects/Product2/fields/ARCQuotes__c.field-meta.xml
<CustomField>
    <fullName>ARCQuotes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to determine if an item should be shown on ARC quotes pages.  It is populated via a script that runs from Sage</description>
    <label>ARCQuotes</label>
    <type>Checkbox</type>
</CustomField>