force-app/main/default/objects/Product2/fields/Date_To_Press__c.field-meta.xml
<CustomField>
    <fullName>Date_To_Press__c</fullName>
    <label>Date To Press</label>
    <type>Date</type>
</CustomField>