force-app/main/default/objects/Product2/fields/Item_Class_ID__c.field-meta.xml
<CustomField>
    <fullName>Item_Class_ID__c</fullName>
    <description>This is the item class ID from Sage.  It is pushed in via a Python script and shouldn&apos;t be changed in SFDC</description>
    <label>Item Class ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>