force-app/main/default/objects/Product2/fields/ItemKey__c.field-meta.xml
<CustomField>
    <fullName>ItemKey__c</fullName>
    <description>This is the item key from our external ERP system.  It will be used as the external ID for all imports from the ERP</description>
    <externalId>true</externalId>
    <label>ItemKey</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>