force-app/main/default/objects/Product2/fields/Product_Heading_Sort__c.field-meta.xml
<CustomField>
    <fullName>Product_Heading_Sort__c</fullName>
    <label>Product Heading Sort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>