force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>ARC_Sage_Item_Heading_title__c</columns>
    <columns>ARC_Sage_Subheading__c</columns>
    <columns>ItemKey__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ItemKey__c</field>
        <operation>equals</operation>
        <value>63709</value>
    </filters>
    <label>All Products</label>
</ListView>