force-app/main/default/objects/Product2/listViews/Future_Date_to_Press.listView-meta.xml
<ListView>
    <fullName>Future_Date_to_Press</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Date_To_Press__c</columns>
    <columns>ItemKey__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Date_To_Press__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Future Date to Press</label>
</ListView>