force-app/main/default/objects/Product2/listViews/Quote_Page_Items.listView-meta.xml
<ListView>
    <fullName>Quote_Page_Items</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ARCQuotes__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Quote Page Items</label>
</ListView>